--- a/index.html
+++ b/index.html
@@ -126,22 +126,45 @@
         </div>
       </div>
     </section>
-    <!--
     <section id="methodology">
       <div class="container">
         <div class="row">
           <div class="features">
             <h2>Metodología de <span class="purple">Investigación</span></h2>
-            
+            <p class="features__para">
+              Se determinarán las variables necesarias relacionadas a la cantidad de desechos que se arrojan por parte de la India al océano Índico, para dilucidar la cantidad de desechos que son plásticos y en adición a esto que son de tipo PET, generando una relación de plásticos de tipo PET, su cantidad en toneladas y su distribución entre los demás desechos arrojados al océano Índico, para posteriormente generar una relación  de distribución de desechos plásticos en metro cúbico de agua del océano Índico
+            </p>
             <div class="features__services">
               <div class="service">
                 <div class="service__img--container">
-                  <img class="service__icon" src="assets/user.png" alt="" />
+                  <img class="service__icon" src="assets/percentageIcon.png" alt="" />
                 </div>
                 <div class="service__text--container">
                   <span class="service__text--title">1er paso</span>
                   <p class="service__text--description">
-                    Identificar los consumidores primarios de plástico en la India en la década de 2010.
+                    Determinar cuantitativamente el porcentaje de influencia de la contaminación del océano Índico causada por plásticos de tipo PET
+                  </p>
+                </div>
+              </div>          
+              <div class="service">
+                <div class="service__img--container">
+                  <img class="service__icon" src="assets/no-plastic-bottles.png" alt="" />
+                </div>
+                <div class="service__text--container">
+                  <span class="service__text--title">2do paso</span>
+                  <p class="service__text--description">
+                    Contrastar cuantitativamente la finalidad, el uso y disposición final de los plásticos de tipo PET per cápita en la India
+                  </p>
+                </div>
+              </div>          
+              <div class="service">
+                <div class="service__img--container">
+                  <img class="service__icon" src="assets/plasticContamIcon.png" alt="" />
+                </div>
+                <div class="service__text--container">
+                  <span class="service__text--title">3er paso</span>
+                  <p class="service__text--description">
+                    Realizar una revisión sistemática de la literatura con el fin de dilucidar cuantitativamente la responsabilidad del plástico de tipo PET en el impacto ambiental generado por la contaminación  en el océano Índico
                   </p>
                 </div>
               </div>          
@@ -150,31 +173,9 @@
                   <img class="service__icon" src="assets/user.png" alt="" />
                 </div>
                 <div class="service__text--container">
-                  <span class="service__text--title">1er paso</span>
+                  <span class="service__text--title">4to paso</span>
                   <p class="service__text--description">
-                    Identificar los consumidores primarios de plástico en la India en la década de 2010.
-                  </p>
-                </div>
-              </div>          
-              <div class="service">
-                <div class="service__img--container">
-                  <img class="service__icon" src="assets/user.png" alt="" />
-                </div>
-                <div class="service__text--container">
-                  <span class="service__text--title">1er paso</span>
-                  <p class="service__text--description">
-                    Identificar los consumidores primarios de plástico en la India en la década de 2010.
-                  </p>
-                </div>
-              </div>          
-              <div class="service">
-                <div class="service__img--container">
-                  <img class="service__icon" src="assets/user.png" alt="" />
-                </div>
-                <div class="service__text--container">
-                  <span class="service__text--title">1er paso</span>
-                  <p class="service__text--description">
-                    Identificar los consumidores primarios de plástico en la India en la década de 2010.
+                    Determinar cuantitativamente las principales causas negativas al ser humano y sus líneas de abastecimiento derivadas del mal manejo de los residuos plásticos de tipo PET
                   </p>
                 </div>
               </div>          
@@ -182,7 +183,7 @@
           </div>
         </div>
       </div>
-    </section>-->
+    </section>
     <section id="quality">
       <div class="container">
         <div class="row">
