--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <!-- <h5><span class="purple">FEATURES</span></h5> -->
             <h2>Objetivo <span class="purple">General</span></h2>
             <p class="features__para">
-              Plantear un modelo matemático que relacione las variables conocidas tales como toneladas netas de plástico que se desechan en el océano por año con el porcentaje de incidencia de los plásticos PET en esa cantidad.
+              Justificar la incidencia del plástico tipo PET en la contaminación oceánica de la India mediante una comparación de tablas y gráficas que relacionen diferentes variables cualitativas y cuantitivas como tipo de plástico y toneladas de plástico desechadas 
             </p>
             <div class="features__services">
               <div class="service">
@@ -60,7 +60,7 @@
                 <div class="service__text--container">
                   <span class="service__text--title">1er Objetivo Específico</span>
                   <p class="service__text--description">
-                    Analizar la influencia del PET en la contaminación del océano en la India teniendo en cuenta el porcentaje vertido en comparación al total del plástico y la toxicidad del material.
+                    Analizar la influencia del PET en la contaminación de las costas en la India teniendo en cuenta el porcentaje de desechos encontrados en la india en comparación al total del plástico vertido al océano entre 2018 y 2019.
                   </p>
                 </div>
               </div>
@@ -74,29 +74,7 @@
                     Modelar la incidencia del consumidor de plástico PET sobre la contaminación en el océano considerando el porcentaje de plástico reciclado en el país.
                   </p>
                 </div>
-              </div>
-              <div class="service">
-                <div class="service__img--container">
-                  <img class="service__icon" src="assets/lupaIcon.png" alt="" />
-                </div>
-                <div class="service__text--container">
-                  <span class="service__text--title">3er Objetivo Específico</span>
-                  <p class="service__text--description">
-                    Identificar los lugares de mayor congestión de contaminación hacia el océano en la India basándose en un inventario de basureros y vertederos.
-                  </p>
-                </div>
-              </div>           
-              <div class="service">
-                <div class="service__img--container">
-                  <img class="service__icon" src="assets/mathIcon.png" alt="" />
-                </div>
-                <div class="service__text--container">
-                  <span class="service__text--title">4to Objetivo Específico</span>
-                  <p class="service__text--description">
-                    Modelar las variables disponibles mediante regresiones matemáticas para analizar una posible correlación entre la zona de contaminación, el porcentaje de PET y la toxicidad del sitio.
-                  </p>
-                </div>
-              </div>           
+              </div>                      
             </div>
           </div>
         </div>
@@ -194,6 +172,45 @@
             <div class="quality__img">
               <img src="assets/Matriz-de-datos.png" alt="" />
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="features">
+      <div class="container">
+        <div class="row">
+          <div class="features">
+            <!-- <h5><span class="purple">FEATURES</span></h5> -->
+            <h2>Análisis de <span class="purple">Datos</span></h2>
+            <p class="features__para">
+              Plantear un modelo matemático que relacione las variables conocidas tales como toneladas netas de plástico que se desechan en el océano por año con el porcentaje de incidencia de los plásticos PET en esa cantidad.
+            </p>
+            <!--
+            <div class="features__services">
+              <div class="service">
+                <div class="service__img--container">
+                  <img class="service__icon" src="assets/oceanIcon.png" alt="" />
+                </div>
+                <div class="service__text--container">
+                  <span class="service__text--title">1er Objetivo Específico</span>
+                  <p class="service__text--description">
+                    Analizar la influencia del PET en la contaminación del océano en la India teniendo en cuenta el porcentaje vertido en comparación al total del plástico y la toxicidad del material.
+                  </p>
+                </div>
+              </div>
+              <div class="service">
+                <div class="service__img--container">
+                  <img class="service__icon" src="assets/user.png" alt="" />
+                </div>
+                <div class="service__text--container">
+                  <span class="service__text--title">2do Objetivo Específico</span>
+                  <p class="service__text--description">
+                    Modelar la incidencia del consumidor de plástico PET sobre la contaminación en el océano considerando el porcentaje de plástico reciclado en el país.
+                  </p>
+                </div>
+              </div>         
+            </div>
+            -->
           </div>
         </div>
       </div>
