--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 
               <div class="service">
                 <div class="service__img--container">
-                  <img class="service__icon" src="assets/trash-can.png " alt="" />
+                  <img class="service__icon" src="assets/percentageIcon.png" alt="" />
                 </div>
                 <div class="service__text--container">
                   <span class="service__text--title">5ta Conclusión</span>
