--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
       <div class="container">
         <div class="row">
           <div class="features">
-            <h2>Concluciones de la <span class="purple">Investigación</span></h2>
+            <h2>Conclusiones de la <span class="purple">Investigación</span></h2>
             <div class="features__services">
               <div class="service">
                 <div class="service__img--container">
